--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/Users/abarbosa/Documents/workspace/CODE2040/WebContent/WEB-INF/lib/json-20140107.jar"/>
+	<classpathentry kind="lib" path="/Users/abarbosa/Documents/workspace/CODE2040/WebContent/WEB-INF/lib/joda-time-2.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
